# stark

./: download_emb.py  eval.py  generate_emb.py  load_dataset.ipynb  pyproject.toml
config/: default_args.json
src/benchmarks/: __init__.py  get_qa_dataset.py  get_semistruct.py
src/benchmarks/qa_datasets/: __init__.py  amazon.py  stark_qa.py
src/benchmarks/semistruct/: __init__.py  amazon.py  knowledge_base.py
src/models/: __init__.py  llm_reranker.py  model.py  multi_vss.py  vss.py
src/tools/: api.py  args.py  graph.py  io.py  node.py  operation.py  process_image.py  process_text.py  seed.py
src/tools/api_lib/: __init__.py  claude.py  gpt.py  huggingface.py  openai_emb.py
