[tool.poetry]
name = "stark"
version = "0.1.0"
description = ""
authors = ["Denis Lusson <denis.lusson@epita.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1,<3.9"
torch = "^2.3.0"
pandas = "2.0.3"
tqdm = "^4.66.2"
gdown = "^5.1.0"
ogb = "^1.3.6"
pyvis = "^0.3.2"
torch-geometric = "^2.5.3"
langchain = "0.0.339"
nltk = "^3.8.1"
polars = "^0.20.23"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
